--- a/spring-boot-learning/mybatis/pom.xml
+++ b/spring-boot-learning/mybatis/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.guorong</groupId>
         <artifactId>spring-boot-learning</artifactId>
-        <version>${reversion}</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.guorong</groupId>
             <artifactId>common</artifactId>
-            <version>${reversion}</version>
+            <version>${project.version}</version>
         </dependency>
         <!--mvc-->
         <dependency>
@@ -69,13 +69,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.5</version>
-        </dependency>
-        <!--lombok-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
