--- a/spring-boot-learning/elasticsearch-client/pom.xml
+++ b/spring-boot-learning/elasticsearch-client/pom.xml
@@ -7,11 +7,12 @@
     <parent>
         <groupId>com.guorong</groupId>
         <artifactId>spring-boot-learning</artifactId>
-        <version>${reversion}</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <elasticsearch.version>7.6.2</elasticsearch.version>
         <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
     </properties>
@@ -33,7 +34,7 @@
         <dependency>
             <groupId>com.guorong</groupId>
             <artifactId>common</artifactId>
-            <version>${reversion}</version>
+            <version>${project.version}</version>
         </dependency>
         <!--web-->
         <dependency>
