--- a/spring-boot-learning/elasticsearch-repository/pom.xml
+++ b/spring-boot-learning/elasticsearch-repository/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.guorong</groupId>
         <artifactId>spring-boot-learning</artifactId>
-        <version>${reversion}</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.guorong</groupId>
             <artifactId>common</artifactId>
-            <version>${reversion}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- web -->
         <dependency>
