--- a/spring-boot-learning/spring-jdbc/pom.xml
+++ b/spring-boot-learning/spring-jdbc/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.guorong</groupId>
         <artifactId>spring-boot-learning</artifactId>
-        <version>${reversion}</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
