--- a/spring-boot-learning/spring-mvc/pom.xml
+++ b/spring-boot-learning/spring-mvc/pom.xml
@@ -7,13 +7,12 @@
     <parent>
         <groupId>com.guorong</groupId>
         <artifactId>spring-boot-learning</artifactId>
-        <version>${reversion}</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <java.version>1.8</java.version>
         <spring-boot.version>2.7.2</spring-boot.version>
     </properties>
 
@@ -34,7 +33,7 @@
         <dependency>
             <groupId>com.guorong</groupId>
             <artifactId>common</artifactId>
-            <version>${reversion}</version>
+            <version>${project.version}</version>
         </dependency>
         <!--mvc-->
         <dependency>
