--- a/spring-boot-learning/swagger/pom.xml
+++ b/spring-boot-learning/swagger/pom.xml
@@ -3,10 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>swagger</artifactId>
+
     <parent>
         <groupId>com.guorong</groupId>
         <artifactId>spring-boot-learning</artifactId>
-        <version>${reversion}</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
@@ -32,7 +33,7 @@
         <dependency>
             <groupId>com.guorong</groupId>
             <artifactId>common</artifactId>
-            <version>${reversion}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- web -->
         <dependency>
