--- a/spring-boot-learning/spring-aop/pom.xml
+++ b/spring-boot-learning/spring-aop/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-mock</artifactId>
+    <artifactId>spring-aop</artifactId>
 
     <parent>
         <groupId>com.guorong</groupId>
@@ -18,6 +18,7 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--spring boot-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -35,10 +36,10 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--mvc-->
+        <!--aop-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <!--test-->
         <dependency>
@@ -56,5 +57,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
