--- a/spring-boot-learning/spring-demo/pom.xml
+++ b/spring-boot-learning/spring-demo/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <properties>
-        <java.version>8</java.version>
+        <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <spring-boot.version>2.7.2</spring-boot.version>
@@ -30,6 +30,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <!--common-->
+        <dependency>
+            <groupId>com.guorong</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
