--- a/spring-boot-learning/spring-demo/pom.xml
+++ b/spring-boot-learning/spring-demo/pom.xml
@@ -10,9 +10,9 @@
     </parent>
 
     <properties>
-        <java.version>8</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <spring-boot.version>2.7.2</spring-boot.version>
     </properties>
 
