--- a/spring-custom/pom.xml
+++ b/spring-custom/pom.xml
@@ -5,21 +5,17 @@
     <groupId>com.guorong.springframwork</groupId>
     <artifactId>spring-custom</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>spring-custom</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.1</junit.version>
         <cglib.version>3.3.0</cglib.version>
     </properties>
 
     <dependencies>
-        <!-- junit-jupiter-api -->
+        <!-- junit -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
