--- a/design-pattern-learning/pom.xml
+++ b/design-pattern-learning/pom.xml
@@ -35,6 +35,7 @@
         <module>behavioral-mediator</module>
         <module>behavioral-memento</module>
         <module>behavioral-visitor</module>
+        <module>z-demo</module>
     </modules>
 
     <properties>
@@ -64,14 +65,4 @@
             <version>3.3.0</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
