--- a/spring-boot-learning/spring-demo/src/main/resources/application.yml
+++ b/spring-boot-learning/spring-demo/src/main/resources/application.yml
@@ -1,4 +1,8 @@
-# debug: true
-logging:
-  level:
-    root: debug
+debug: false
+### 数据源配置 ###
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/distributed_lock?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
