--- a/spring-boot-learning/mybatis-plus/src/main/resources/application-h2.properties
+++ b/spring-boot-learning/mybatis-plus/src/main/resources/application-h2.properties
@@ -12,7 +12,7 @@ spring.h2.console.enabled=true
 spring.sql.init.schema-locations=classpath:db/h2.sql
 
 ### \u65E5\u5FD7\u914D\u7F6E ###
-logging.level.com.guorong.mp.mapper=debug
+logging.level.com.guorong.mp.mapper=info
 # \u65E5\u5FD7\u6587\u4EF6\u540D\u79F0
 logging.file.name=logs/mybatis-plus.log
 # \u65E5\u5FD7\u6587\u4EF6\u6EDA\u52A8\u5927\u5C0F
