--- a/office-util-learning/easy-excel-write/pom.xml
+++ b/office-util-learning/easy-excel-write/pom.xml
@@ -23,11 +23,11 @@
             <artifactId>easyexcel</artifactId>
             <version>2.2.10</version>
         </dependency>
-        <!-- junit -->
+        <!-- junit-jupiter-api -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.0</version>
         </dependency>
         <!-- lombok -->
         <dependency>
